infrastructure/k8s/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 15
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/d.ponizovskiy/momo-store/momo-frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: 0.1
            limits:
              memory: "512Mi"
              cpu: 0.2
          ports:
            - name: frontend
              containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
      imagePullSecrets:
        - name: docker-config-secret
