infrastructure/k8s/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: “nginx”
    cert-manager.io/cluster-issuer: "yc-clusterissuer"
spec:
  tls:
    - hosts:
      - momo-store.lightstandart.com
      secretName: domain-name-secret
  rules:
    # Хост определяет правило направления траффика по доменному имени
  - host: momo-store.lightstandart.com
    http:
      # Для различных путей в URL можно указать различные бэкенд-сервисы
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Заранее создан сервис типа ClusterIP
            # Он выступает в качестве бэкенда нашего Ingress
            name: frontend
            port:
              # У сервиса может быть несколько портов, указываем нужный нам
              number: 80
